changes made to add filters in layout
